# pocket-chemist

./: .gitignore  Makefile  README.md  Taskfile.yml  pyproject.toml  setup.cfg
.github/workflows/: python-publish.yml
docs/: conf.py  index.rst
docs/development/: cheatsheet.rst  index.rst  roadmap.rst
docs/development/changelog/: NEWS.rst  index.rst
docs/development/newsfragments/: 11.feature.rst  3.feature.rst  6.feature.rst  7.doc.rst  8.doc.rst
docs/usage/: index.rst
src/pocketchemist/: __init__.py  config.py  hookimpls.py  hookspecs.py
src/pocketchemist/cli/: __init__.py  cli.py  hookspecs.py  main.py  setup.py
src/pocketchemist/modules/: modules.py
src/pocketchemist/processors/: __init__.py  fft.py  processor.py
src/xamin/: __about__.py  __init__.py  __main__.py  hookimpls.py  hookspecs.py
src/xamin/cli/: __init__.py  gui.py  hookspecs.py  main.py  setup.py
src/xamin/entry/: __init__.py  binary_entry.py  csv_entry.py  entry.py  project.py  text_entry.py  yaml_entry.py
src/xamin/gui/: __init__.py  actions.py  main.py  main_window.py  menubar.py  plugins.py  projects.py  shortcuts.py  sidebar_manager.py  toolbar.py
src/xamin/gui/activities/: __init__.py  base.py  code_editor.py
src/xamin/gui/activities/code_editor/: __init__.py  activity.py  model.py  view.py
src/xamin/gui/activities/explorer/: __init__.py  activity.py  dialogs.py  sidebar.py
src/xamin/gui/assets/: __init__.py  assets.py
src/xamin/gui/assets/styles/: dark.qss
src/xamin/gui/dialogs/: __init__.py  view_selector.py
src/xamin/gui/icons/: COPYRIGHT.md  __init__.py
src/xamin/gui/panels/: __init__.py  base.py  explorer.py  stack.py
src/xamin/gui/sidebars/: base.py  explorer.py  stack.py
src/xamin/gui/styles/: dark.qss  default.qss
src/xamin/gui/view_models/: __init__.py  base.py  code_editor.py
src/xamin/gui/views/: __init__.py  code_editor.py
src/xamin/processors/: processor.py
src/xamin/project/: __init__.py  binary_entry.py  csv_entry.py  entry.py  project.py  text_entry.py  yaml_entry.py
src/xamin/projects/: entry.py
src/xamin/utils/: __init__.py  classes.py  dict.py  list.py  path.py  types.py
tests/: conftest.py  test_pocket_chemist.py
tests/entry/: test_entry.py  test_project.py
tests/gui/: test_gui.py  test_main_window.py
tests/gui/activities/explorer/: test_dialogs.py  test_sidebar.py
tests/gui/assets/: test_assets.py
tests/gui/dialogs/: test_view_selector.py
tests/modules/: test_modules.py
tests/processors/: test_fft.py
tests/project/: conftest.py  test_entry.py  test_project.py
