[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xamin"
authors = [
    {name = "Justin Lorieau", email = "justin@lorieau.com"},
]
description = "Software for the analysis of datasets, spectra and molecules"
readme = "README.md"
requires-python = ">=3.12"
keywords = ["examine", "analysis", "scientific", "gui"]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
]

dependencies = [
    "click >= 8.0.3",
    "PyYAML >= 6.0",
    "loguru >= 0.5.3",
    "thatway >= 0.6",
    "pyqt6 >= 6.6"
]
dynamic = ["version"]

[project.optional-dependencies]
tests = [
    "pytest >= 6.2", 
    "pytest-qt >= 4.4"
]
dev = [
    "pyinstaller >= 6.5", 
    "black >= 24.3", 
    "mypy >= 1.10",
    "types-PyYAML >= 6.0"
]


[project.scripts]
xm = "xamin.__main__:main"

[tool.hatch.version]
path = "src/xamin/__about__.py"

# Linting settings
[tool.mypy]
disallow_untyped_defs = true
exclude = [
    "tests*",
]

# Test settings

[tool.pytest.ini_options]
addopts = "--doctest-modules --import-mode=importlib"
testpaths = [
    "tests",
    "src"  # doctests
]

# Build hooks and configuration

[tool.hatch.build.targets.wheel]
only-include = ["src"]
sources = ["src"]

[tool.hatch.build.targets.wheel.hooks.mypyc]
dependencies = [
    "hatch-mypyc",
    "mypy",
    "types-PyYAML"
]
require-runtime-dependencies = true
include = [
    "/src/xamin/entry",
]
exclude = [
    "**/__init__.py",
]
mypy-args = ["--ignore-missing-imports"]

[build.targets.wheel.hooks.mypyc.options]
opt_level = "3"

# Environments

[tool.hatch.envs.default]
features = [
    "tests",
    "dev"
]

[tool.hatch.envs.hatch-test]
features = [
    "tests",
]

[[tool.hatch.envs.hatch-test.matrix]]
python = ["3.12"]

[tool.hatch.envs.hatch-test.scripts]
run = "pytest{env:HATCH_TEST_ARGS:} {args}"