[metadata]
name = xamin
version = 0.1.10
author = Justin L Lorieau
author_email = justin@lorieau.com
description = Software for the analysis of spectra and molecules
long_description = file: README.rst
license = GPLv3

[options]
python_requires = >=3.8
package_dir =
    = src
packages = find:
include_package_data = true
install_requires =
    click >= 8.0.3
    PyYAML >= 6.0
    loguru >= 0.5.3
    pluggy >= 1.0.0

[options.extras_require]
testing =
    pytest >= 6.2

[options.package_data]
tests = tests

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    xamin = xamin.cli:main
